--- a/movie-app/src/Pages/SingleMovie/SingleMovie.css
+++ b/movie-app/src/Pages/SingleMovie/SingleMovie.css
@@ -22,6 +22,16 @@
     padding: 10px 10px 75px 10px;
 }
 
+.overlay-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(13, 11, 11, 0.677);
+
+}
+
 .roundeds {
     border-radius: 15px !important;
     overflow: hidden;
@@ -108,7 +118,7 @@
     }
 
     .single-movie-poster {
-        padding: 18px !important;
+        /* padding: 18px !important; */
     }
 
     .movie-runtime {
